--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -140,3 +140,9 @@
   color: #FFFFFF;
   background: $dark-yellow;
 }
+
+.auth-form-error-signin {
+  font-size: 14px;
+  margin-bottom: 20px;
+  text-align: center;
+}
