--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -32,7 +32,17 @@
   color: #000000;
 }
 
+.search-no-result {
+  font-size: 16px;
+}
+
 .search-story-item {
   border-bottom: 1px solid $light-gray;
   padding-bottom: 30px;
+}
+
+.search-user-item-follow-btn {
+  position: absolute;
+  right: 0;
+  top: -5px;
 }
