make user search results into links

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -26,6 +26,10 @@
   color: $gray;
   float: left;
   padding: 10px 10px 10px 0px;
+  
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .search-index-tab-active {
