setup top stories in landing page

--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -245,7 +245,18 @@
     padding-bottom: 5px;
   }
   
+  .rec-user-img {
+    border-radius: 50%;
+    float: left;
+    height: 32px;
+    width: 32px;
+  }
+  
+  .rec-item-info {
+    fl
+  }
+  
   .rec-tag {
     background: $darker-white;
-  }
+  }  
 }
