set story to null when story show unmounts

--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -232,7 +232,7 @@
   }
   
   .rec {
-    margin-bottom: 50px;
+    margin-bottom: 40px;
   }
   
   .rec-item {
@@ -256,6 +256,16 @@
   .rec-item-info {
     display: block;
     float: left;
+    margin-top: -3px;
+  }
+  
+  .rec-item-title {
+    font-size: 14px;
+  }
+  
+  .rec-item-user-fullname {
+    color: $gray;
+    font-size: 14px;
   }
   
   .rec-tag {
