--- a/app/assets/stylesheets/sass_variables.scss
+++ b/app/assets/stylesheets/sass_variables.scss
@@ -2,7 +2,7 @@
 $lightest-gray: rgba(0,0,0,.05);
 $light-gray: rgba(0, 0, 0, 0.20);
 $lighter-gray: rgba(0, 0, 0, 0.40);
-$gray: #d3d3d3;
+$gray: rgba(0, 0, 0, 0.439216);
 $main-background-gray: #FAFAFA;
 $dark-gray: rgba(0,0,0,0.6);
 $overlay-gray: rgba(51,51,51,0.7);
