--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -85,7 +85,9 @@
 }
 
 .stories-tag-form {
+  border-bottom: 1px solid $gray;
   margin-bottom: 20px;
+  padding: 3px 3px 3px 0px;
 }
 
 .stories-tag-form-header {
@@ -101,8 +103,28 @@
 }
 
 .stories-tag-input {
+  color: #000000;
   font-size: 14px;
   width: calc(100% - 11px); // 11px = width of submit button
+}
+
+.stories-tag-desc {
+  color: #000000;
+  float: left;
+  margin-right: 5px;
+}
+
+.stories-tag-count {
+  color: #000000;
+  float: left;
+}
+
+.stories-tag-form-searched-tags {
+  margin-bottom: 15px
+}
+
+.stories-searched-tag {
+  margin-bottom: 5px;
 }
 
 .stories-tag-submit {
