toggle write story and publish links; render stories tag form on publish link click

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -136,7 +136,16 @@
 
 .header-list-story-link {
   margin: 6px 15px 0px 0px;
+  position: relative;
 }
+
+// stories tag form //
+.stories-tag-form-container {
+  position: absolute;
+  right: 0px;
+  top: 20px;
+}
+// end //
 
 .header-list-auth-user-container {
   float: left;
