remove debugger; handle render when there are no stories searched by specific tag

--- a/app/assets/stylesheets/definitions.scss
+++ b/app/assets/stylesheets/definitions.scss
@@ -97,8 +97,18 @@
   background: #FFFFFF;
 }
 
+#no-stories {
+  background: white;
+  font-size: 16px;
+  padding: 20px;
+}
+
 @media (min-width: 768px) {
   .padding-side {
     padding: 0px;
+  }
+  
+  #no-stories {
+    font-size: 24px;
   }
 }
